--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,8 @@ svg path.basecolor {
   display: inline-block;
   padding-top: 32px;
   padding-bottom: 28px;
+  padding-left: 5px;
+  padding-right: 5px;
   font-weight: 500;
   letter-spacing: 0.02em;
 
