--- a/css/styles.css
+++ b/css/styles.css
@@ -55,17 +55,13 @@ p {
 }
 
 .container {
-  width: 1230px;
+  width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
 }
 
 .section {
   padding: 94px 0;
-}
-
-.section.one-padding {
-  padding-top: 0;
 }
 
 .button {
@@ -123,7 +119,7 @@ svg path.basecolor {
 /*-------------- Header styles -------------- */
 
 .header-box {
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-bottom: 1px solid #ececec;
 }
 
 .header-container {
@@ -137,7 +133,7 @@ svg path.basecolor {
 }
 
 .header-logo {
-  margin-right: 80px;
+  margin-right: 85px;
 
   font-family: "Raleway", sans-serif;
   font-style: normal;
@@ -168,8 +164,6 @@ svg path.basecolor {
   display: inline-block;
   padding-top: 32px;
   padding-bottom: 28px;
-  padding-left: 5px;
-  padding-right: 5px;
   font-weight: 500;
   letter-spacing: 0.02em;
 
@@ -219,12 +213,13 @@ svg path.basecolor {
 /* -------------- Sector Hero styles -------------- */
 
 .hero-section {
-  width: 1600px;
   margin: 0 auto;
   padding: 200px 0px;
 
   text-align: center;
-  background: url(./img/header.jpg), #2f303a;
+  background-image: url(./img/header.jpg);
+  background-color: #2f303a;
+  background-repeat: no-repeat;
   background-blend-mode: overlay;
 }
 
@@ -242,12 +237,19 @@ h1 {
 
 /* -------------- Sector Advantage styles -------------- */
 
+.adv-section {
+  padding-top: 94px;
+}
+
 .adv-list {
   display: flex;
+  padding-bottom: 94px;
+
+  border-bottom: 1px solid #ececec;
 }
 
 .adv-list-item {
-  width: 278px;
+  width: 270px;
 }
 
 .adv-list-item:not(:last-child) {
@@ -279,6 +281,8 @@ h1 {
 }
 
 .adv-description {
+  margin-bottom: 0px;
+
   line-height: 1.71;
 }
 
@@ -290,7 +294,7 @@ h1 {
 
 .job-item {
   position: relative;
-  width: 380px;
+  width: 370px;
   border-radius: 4px;
 }
 
@@ -298,9 +302,14 @@ h1 {
   margin-right: 30px;
 }
 
+.job-picture {
+  display: block;
+  border-radius: inherit;
+}
+
 .job-title {
   position: absolute;
-  bottom: 2px;
+  bottom: 0px;
   width: 100%;
   padding: 27px 0px;
   margin-bottom: 0px;
@@ -325,20 +334,27 @@ h1 {
 }
 
 .team-item {
-  width: 278px;
-  padding-bottom: 24px;
-
+  width: 270px;
   border-radius: 4px;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
-  background-color: var(--background-basic);
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
 }
 
 .team-item:not(:last-child) {
   margin-right: 30px;
 }
 
-.team-item > img {
-  margin-bottom: 30px;
+.team-item-box {
+  padding-top: 30px;
+  padding-bottom: 24px;
+  background-color: var(--background-basic);
+  border-bottom-left-radius: inherit;
+  border-bottom-right-radius: inherit;
+}
+
+.team-picture {
+  display: block;
+  object-fit: cover;
   border-top-left-radius: inherit;
   border-top-right-radius: inherit;
 }
@@ -364,7 +380,6 @@ h1 {
 
 .team-social-list {
   display: flex;
-  margin: 0px 35px;
   justify-content: center;
 }
 
@@ -398,7 +413,7 @@ h1 {
 }
 
 .client-item {
-  width: 175px;
+  width: 170px;
   height: 90px;
 
   border: 1px solid var(--logos-color);
@@ -422,10 +437,7 @@ h1 {
   fill: inherit;
 }
 
-.client-logo {
-  fill: inherit;
-}
-
+.client-logo,
 .client-logo path {
   fill: inherit;
 }
@@ -444,6 +456,7 @@ h1 {
 
 .footer-firstlevel {
   display: flex;
+  align-items: baseline;
   padding-top: 48px;
   padding-bottom: 28px;
 
@@ -451,7 +464,7 @@ h1 {
 }
 
 .foot-adress-box {
-  margin-right: 180px;
+  margin-right: 80px;
 }
 
 .foot-logo {
@@ -491,10 +504,6 @@ h1 {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.foot-links-box {
-  padding-top: 8px;
-}
-
 .foot-links-title {
   display: block;
   margin-bottom: 21px;
@@ -530,7 +539,6 @@ h1 {
 
 .foot-signin-box {
   margin-left: auto;
-  padding-top: 8px;
 }
 
 .foot-signin-title {
@@ -548,10 +556,10 @@ h1 {
 }
 
 .foot-input {
-  width: 270px;
+  width: 358px;
   height: 50px;
   margin-right: 12px;
-  padding-left: 12px;
+  padding: 0px 12px;
 
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -608,7 +616,7 @@ h1 {
 .filter-button {
   display: block;
   min-width: max-content;
-  padding: 0px 22px;
+  padding: 6px 22px;
 
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -636,10 +644,10 @@ h1 {
 }
 
 .project-item {
-  position: relative;
-  width: 380px;
+  /* Временно не используется */
+  /* position: relative; */
+  width: 370px;
 
-  border: 1px solid #eeeeee;
   border-radius: 5px;
 }
 
@@ -651,7 +659,7 @@ h1 {
   margin-bottom: 30px;
 }
 
-.project-item:not(:first-child) .hover-text {
+.project-item .hover-text {
   display: none;
 }
 
@@ -665,14 +673,19 @@ h1 {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: inherit;
 }
 
 .project-img {
   display: block;
-  border-radius: 5px 5px 0px 0px;
+  object-fit: cover;
+  border-top-left-radius: inherit;
+  border-top-right-radius: inherit;
 }
 
-.hover-text {
+/* Временно не используется */
+
+/* .hover-text {
   display: flex;
   position: absolute;
   top: 0px;
@@ -688,10 +701,15 @@ h1 {
   color: var(--additinal-color);
   background: rgba(33, 150, 243, 0.9);
   border-radius: 5px 5px 0px 0px;
-}
+} */
 
 .project-title-box {
-  padding: 20px 24px;
+  padding: 20px 22px;
+  border-left: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-bottom-left-radius: inherit;
+  border-bottom-right-radius: inherit;
 }
 
 .project-title {
@@ -708,6 +726,7 @@ h1 {
 .project-type {
   margin-bottom: 0px;
 
+  font-size: 16px;
   line-height: 1.87;
 
   color: var(--basic-color);
